	  the seqno of an RTP stream will roll over back to 0 after hitting
	  65535. Now, we have a secondary check that will ensure that the
	  seqno rolling over will not cause us to stop accepting DTMF.
  
	    (closes issue 0017571)
	    Reported by: mdeneen
	    Patches:
	          rtp_seqno_rollover.patch uploaded by mmichelson (license 60)
	    Tested by: richardf, maxochoa, JJCinAZ

2010-06-29  Leif Madsen <lmadsen@digium.com>

	* Release Asterisk 1.6.2.10-rc1

2010-06-28 21:51 +0000 [r272924-272927]  Tilghman Lesher <tlesher@digium.com>

	* main/asterisk.c, /: Merged revisions 272926 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/trunk ................
	  r272926 | tilghman | 2010-06-28 16:50:57 -0500 (Mon, 28 Jun 2010)
	  | 15 lines Merged revisions 272925 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r272925 | tilghman | 2010-06-28 16:50:02 -0500 (Mon, 28 Jun 2010)
	  | 8 lines Don't change ownership/group/permissions on run
	  directory, if it already exists. (closes issue #17076) Reported
	  by: stuarth Patches: 20100324__issue17076.diff.txt uploaded by
	  tilghman (license 14) Tested by: stuarth ........
	  ................

	* main/config.c, /: Merged revisions 272923 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/trunk ................
	  r272923 | tilghman | 2010-06-28 16:42:52 -0500 (Mon, 28 Jun 2010)
	  | 19 lines Merged revisions 272921-272922 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r272921 | tilghman | 2010-06-28 16:29:27 -0500 (Mon, 28 Jun 2010)
	  | 8 lines Change the way that we read include files, to
	  accommodate for changes in GCC 4.4. (closes issue #17472)
	  Reported by: seandarcy Patches: config2.patch uploaded by nivan
	  (license 1066) Tested by: nivan ........ r272922 | tilghman |
	  2010-06-28 16:38:49 -0500 (Mon, 28 Jun 2010) | 2 lines Also trim
	  trailing blanks on #includes ........ ................
