@@ -17,6 +17,15 @@
 	          rtp_seqno_rollover.patch uploaded by mmichelson (license 60)
 	    Tested by: richardf, maxochoa, JJCinAZ
 
+	* Clear the AST_CDR_FLAG_DIALED flag for channels going into the pbx
+	  via the G option in app_dial
+    
+	    (closes issue 0017592)
+	    Reported by: jamicque
+	    Patches:
+	          G-flag-cdr-fix1.diff uploaded by mnicholson (license 96)
+	    Tested by: jamicque, mnicholson
+
 2010-06-29  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.6.2.10-rc1
